--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@swc/cli": "0.3.12",
     "@swc/core": "1.5.7",
     "@swc/helpers": "0.5.11",
+    "@swc/jest": "~0.2.36",
     "@testing-library/react": "15.0.6",
     "@types/jest": "29.4.0",
     "@types/node": "^18.16.9",
@@ -112,6 +113,7 @@
     "inquirer-autocomplete-prompt": "^1.0.1",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "14.1.0",
     "netlify": "^2.4.8",
     "nx": "19.5.0-beta.5",
